Fix text button color on dark mode

--- a/assets/css/general/button.css
+++ b/assets/css/general/button.css
@@ -58,6 +58,7 @@
 .button-text {
     background-color: transparent;
     border: 0;
+    color: var(--darker-gray-color);
     cursor: pointer;
     line-height: inherit;
     outline: none;
